Fixed a spacing issue with json files

--- a/CrossRoadsTutoring/Projects/style.css
+++ b/CrossRoadsTutoring/Projects/style.css
@@ -47,6 +47,7 @@ body {
 	width: calc((100% - 15% - 5%) / 2);
 	margin: 10px;
 	color: #fff;
+	border: none;
 	overflow-y: auto;
 }
 
